--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -63,6 +63,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "CacheSettings:ConnectionString=basketdb:6379"
+      - "GrpcSettings:DiscountUrl=http://discount.grpc"
     depends_on:
       - basketdb
     ports:
@@ -70,6 +71,7 @@ services:
 
 
   discount.api:
+    container_name: discount.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
       - "DatabaseSettings:ConnectionString=server=discountdb;port=5432;database=DiscountDb;user id=admin;password=admin1234;"
@@ -77,4 +79,15 @@ services:
       - discountdb
     ports:
       - "8002:80"
+
+
+  discount.grpc:
+    container_name: discount.grpc 
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "DatabaseSettings:ConnectionString=server=discountdb;port=5432;database=DiscountDb;user id=admin;password=admin1234;"
+    depends_on:
+      - discountdb
+    ports:
+      - "8003:80"
 
